# rascal

./: .gitignore  README.md
Latex/Math/: 2013_probability_auction_payoff.tex  2014_best_toilet_selection.tex
Latex/Math/vlr/: emt.R  (+3 more)
Latex/Other/: alin.tex  anda_stories.md  cassie.tex.gpg  journal.tex.gpg  lara.tex.gpg  load.tex.gpg  sms.xml.gpg  story.tex.gpg
R/other/: dygraphs_demo.Rmd  lib_dygraphs.R  lm_longley.R  read_pdf.R
R/scratch/: demo_cars.R  demo_rnoaa.R  regression_sequential.R
dart/chartxl/: pubspec.yaml
dart/cviewer/: README.md  pubspec.yaml
dart/dartice/: README.md  pubspec.yaml
dart/demos/: pubspec.yaml
dart/plotly_examples/: pubspec.yaml
dart/quadrature/: pubspec.yaml
dart/temperature-ui/: pubspec.yaml
dart/timeseries/: pubspec.yaml
dart/utilio/: pubspec.yaml
datasets/csv/: seatacWeather.csv
datasets/json/: oats.json  seatacWeather.json
datasets/scripts/: export_from_R.R
gnuplot/: heatmap.plt  simple.plt
html/: README.md
html/docs/: index.html
html/table_example/: index.html  minimal-table.css  table_with_svg.html
js/monaco/: index.html  index2.html
js/visualization/: chart.html
presentations/flutter/: README.md  index.html
presentations/risk/: README.md  index.html  outline.md
presentations/shooju/: index.html
rust/rex/: Cargo.toml
rust/rex/examples/: datetime_demo.rs  datetime_demos.rs  jiff_demos.rs  parse_demos.rs  ts_demos.rs
rust/rex/src/: lib.rs
rust/rex/src/isone/: lib_mis.rs  mod.rs
rust/rex/src/series/: ts.rs
rust/rex/src/time/: hour.rs  interval.rs  mod.rs  month.rs
typst/: demo.typ
(+540 files in other folders)
