[package]
name = "rex"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.37"
chrono-tz = "0.9.0"
jiff = {version="0.1.8", features = ["serde"]}
serde = {version="1.0.208", features = ["derive"]}
serde_json = "1.0.125"


[[example]]
name = "datetime_demos"
path = "examples/datetime_demos.rs"

